--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.3.0",
         "tailwindcss": "^4.0.8",
+        "video.js": "^8.23.3",
         "vite": "^6.3.5"
     }
 }
